# surge

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .golangci.yaml  .gosec.json  .loc-legacy-allowlist  CHANGELOG.md  CLAUDE.md  Cargo.toml  ITERATION_4_STATUS.md  LANGUAGE.md  MVP++.md  Makefile  PARALLEL_COMPILATION.md  PRAGMA.md  README.md  README.ru.md  SEMANTICS_PLAN.md  SHOWCASES_REPORT.md  STATS.md  StepJ.md  TEST_SUMMARY.md  TODO.md  TRACING.md  check_file_sizes.sh  check_file_sizes_new.sh  cliff.toml  debug_symbol.go  go.mod  go.sum  staticcheck.conf  stats.md  surge_vm.md
.sentrux/: baseline.json  rules.toml
PhaseA/: 01_lexing.sg  02_numbers_strings.sg  03_ops_binds.sg  04_arrays_calls.sg  05_comments.sg  06_logic_true_false.sg  07_exprs.sg  08_ctrl_flow.sg  09_parallel.sg
PhaseB/: 01_basic_types.sg  02_functions_typing.sg  03_arrays_indexing.sg  04_signals_reactive.sg  05_purity_parallel.sg  README.md
PhaseC/: 01_sum_two_int.sg
core/: array.sg  base.sg  entrypoint.sg  format.sg  intrinsics.sg  map.sg  option.sg  option_result.sg  result.sg  string.sg  sync.sg  task.sg
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/diagnostics/: Cargo.toml  README.md
crates/diagnostics/src/: collect.rs  lib.rs  model.rs  report.rs  source.rs
crates/diagnostics/src/format/: csv_format.rs  json.rs  mod.rs  pretty.rs
dev/: intrinsics.md
docs/: 2026-03-27-ret-block-values-tasks.md  2026-04-17-entropy-random-uuid-specs.md  2026-04-17-entropy-random-uuid-tasks.md  2026-04-27-stdlib-hash-design.md  2026-04-27-stdlib-hash-tasks.md  ABI_LAYOUT.md  (+45 more)
(+4153 files in other folders)
