[package]
name = "surge-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
surge-lexer = { path = "../lexer" }
surge-token = { path = "../token" }